k8smanifests/mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: malteahlers
  name: mongodb
  labels: 
    app: mongodb
spec:
  serviceName: mongodb
  replicas: 1
  selector: 
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        name: mongodb-service
    spec:
      containers:
      - name : mongodb
        image : mongo:5.0.14
        ports :
        - containerPort: 27017
          name: mongodb
        volumeMounts:
        - name: mongodb-pvc
          mountPath: /data/db
  volumeClaimTemplates: 
    - metadata:
        name: mongodb-pvc
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  namespace: malteahlers
  labels: 
    app: mongodb
  name: mongodb-service
spec: 
  clusterIP: "None"
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
